--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,9 @@ file(GLOB hdrs "*.h*")
 file(GLOB srcs "*.cpp")
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../3rdparty")
+include iostream
 
 add_executable(${target} ${srcs} ${hdrs})
 target_link_libraries(${target} gtest ${MP2_LIBRARY})
+
+
